--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>mobikad</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
